[package]
name = "minimalist_space_shooter"
version = "0.1.0"
edition = "2021"

[profile.release]
[package.metadata.windows]
subsystem = "windows"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "0.120.0"
rand = "0.8.4"